--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,9 +29,9 @@
   go-tests = true
   unused-packages = true
 
-# [[constraint]]
-#  name = "k8s.io/kubernetes"
-#  version = "1.11.2"
+[[constraint]]
+  name = "k8s.io/kubernetes"
+  version = "1.11.2"
 
 [[constraint]]
   name = "k8s.io/api"
