add evict one pod

--- a/install/evtAgent.yaml
+++ b/install/evtAgent.yaml
@@ -27,12 +27,14 @@ rules:
   - nodes
   - namespaces
   - pods
+  - pods/evictions
   verbs:
   - watch
   - list
   - update
   - get
   - patch
+  - create
 
 ---
 
