--- a/install/evtAgent.yaml
+++ b/install/evtAgent.yaml
@@ -70,6 +70,13 @@ spec:
       containers:
         - name: eviction-agent
           image: eviction-agent:latest
+          resources:
+            requests:
+              cpu: 20m
+              memory: 20Mi
+          command:
+          - /eviction-agent
+          - --v=2
           env:
             - name: NODE_NAME
               valueFrom:
