--- a/install/evtAgent.yaml
+++ b/install/evtAgent.yaml
@@ -27,7 +27,8 @@ rules:
   - nodes
   - namespaces
   - pods
-  - pods/evictions
+  - pods/evictions   # for kubernetes < 1.11
+  - pods/eviction    # for kubernetes >= 1.11
   verbs:
   - watch
   - list
@@ -74,9 +75,6 @@ spec:
             requests:
               cpu: 20m
               memory: 20Mi
-          command:
-          - /eviction-agent
-          - --v=2
           env:
             - name: NODE_NAME
               valueFrom:
